--- a/public/styles/cart.css
+++ b/public/styles/cart.css
@@ -1,3 +1,10 @@
+.unselectable {
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    user-select: none;
+}
+
 .cart__main {
     margin-top: 130px;
     min-height: calc(100vh - 180px);
@@ -203,6 +210,7 @@ ul {
     color: #545454;
 }
 .cart__main__header__total__count {
+    width: 70px;
     margin-left: 20px;
     font-weight: 500;
     font-size: 16px;
@@ -286,7 +294,9 @@ ul {
     flex-direction: column;
 }
 .cart__main__content__item__count-price__top {
+    width: 125px;
     display: flex;
+    align-items: baseline;
 }
 .cart__main__content__item__price-count {
     display: flex;
@@ -305,22 +315,20 @@ ul {
     color: #DA5C34;
 }
 .cart__main__content__item__count {
-    margin-top: 11px;
-    margin-left: 13px;
+    margin-left: 15px;
     font-weight: 600;
-    font-size: 20px;
+    font-size: 22px;
     line-height: 24px;
     color: #DA5C34;
 }
 .cart__main__content__item__count__title {
-    font-size: 10px;
+    font-size: 12px;
 }
 .cart__main__content__item__count-price__bottom {
     margin-top: 10px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    min-width: 115px;
 }
 .cart__main__content__item__count-price__bottom-btn {
     cursor: pointer;
@@ -332,12 +340,19 @@ ul {
     justify-content: center;
     align-items: center;
 }
+.cart__btn-minus {
+    background-image: url(../images/cart/minus_icon.png);
+    background-position: -1px 0;
+}
+.cart__btn-plus {
+    background-image: url(../images/cart/plus_icon.png);
+    background-position: -1px 0;
+}
 .cart__main__content__item__count-price__bottom-btn img {
     margin-left: -1px;
     margin-top: 1px;
 }
 .cart__main__content__item__count-price__bottom-btn-cnt {
-    padding: 0 10px;
     font-weight: 600;
     font-size: 20px;
     line-height: 24px;
@@ -421,6 +436,6 @@ ul {
         display: none;
     }
     .cart__main {
-        min-height: calc(100vh - 233px);
+        min-height: 100%;
     }
 }
