--- a/public/styles/orders.css
+++ b/public/styles/orders.css
@@ -40,6 +40,7 @@
     align-items: flex-end;
 }
 .order__itog__info__more-detail {
+    cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
