--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -10,28 +10,443 @@ body {
 }
 .wrapper {
     display: flex;
-    flex-direction: column;
+    flex-direction: column; 
     justify-content: space-between;
     min-height: 100vh;
 }
-.main {
-    flex-grow: 1;
-}
 .home__main {
-    margin-top: 175px;
-    margin-left: 50px;
+    flex-grow: 1;
+    height: 100%;
+}
+.home__main__image {
+    width: 100%;
+    height: 440px;
+    background: url(../images/home/main_image.png);
+    background-repeat: no-repeat;
+    background-size: 100% 440px;
+}
+.home__container {
+    margin: 0 auto;
+    max-width: 1180px;
+    padding: 0 40px;
+    padding-bottom: 30px;
+}
+.home__menu {
+    margin-top: 40px;
+    display: flex;
+    gap: 70px;
+}
+.home__menu__item {
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    height: 79px;
+}
+.home__menu__item__border {
+    height: 79px;
+    width: 5px;
+    background: #545454;
+}
+.home__menu__item span {
+    line-height: 100%;
+    font-weight: 600;
+    font-size: 40px;
+    color: #545454;
+}
+.home__menu__item:first-child span{
+    color: #F20D0D;
+}
+.home__goods {
+    margin-top: 81px;
+}
+.home__goods__title {
+    font-weight: 500;
+    font-size: 24px;
+    color: #545454;
+}
+.home__goods__list {
+    margin-top: 21px;
     display: flex;
     flex-wrap: wrap;
-    gap: 50px 50px;
+    gap: 20px 20px;
+    width: 100%;
 }
+.home__goods__item {
+    box-sizing: border-box;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 279px;
+    height: 450px;
+    background: #FFFFFF;
+    border-radius: 10px;
+}
+.home__goods__item__image {
+    width: 260px;
+    height: 260px; 
+    background: url(../images/home/good.png);
+}
+.home__goods__item__info {
+    margin-top: 22px;
+}
+.home__goods__item__price {
+    display: flex;
+    align-items: baseline;
+    gap: 12px;
+}
+.home__goods__item__price__title {
+    font-weight: 500;
+    font-size: 30px;
+    color: #545454;
+}
+.home__goods__item__price__subtitle {
+    text-decoration: line-through;
+    font-weight: 300;
+    font-size: 16px;
+    color: #545454;
+}
+.home__goods__item__info__title {
+    margin-top: 5px;
+    font-size: 16px;
+    line-height: 20px;
+    color: #545454
+}
+.home__goods__item__bottom {
+    margin-top: 30px;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    height: 40px;
+}
+.home__goods__item__bottom__left {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.home__goods__item__bottom__left span {
+    text-align: center;
+    width: 55px;
+    font-weight: 600;
+    font-size: 20px;
+    color: #F20D0D;
+}
+.home__goods__item__bottom img {
+    cursor: pointer;
+}
+.home__view-all {
+    cursor: pointer;
+    margin: 21px auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 180px;
+    height: 40px;
+    background: #FFFFFF;
+    border-radius: 20px;
+}
+.home__view-all span {
+    font-weight: 500;
+    font-size: 16px;
+    color: #545454;
+}
+.home-mob__goods__list {
+    display: none;
+}
+.home-mob__goods__item__info__title {
+    font-size: 10px;
+    line-height: 12px;
+}
+.home-mob__goods__item__bottom {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+.home-mob__goods__item__price {
+    display: flex;
+    flex-direction: column;
+}
+.home-mob__goods__item__price__title {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 20px;
+    color: #545454;
+}
+.home-mob__goods__item__price__subtitle {
+    text-decoration: line-through;
+    font-weight: 300;
+    font-size: 10px;
+    line-height: 15px;
+    color: #F20D0D;;
+}
+.home-mob__goods__item__bottom img {
+    margin-top: -3px;
+}
+.home-mob__goods__list {
+    display: none;
+}
+.home-mob__goods__item__bottom__cart-active {
+    box-sizing: border-box;
+    padding: 0 10px;
+    display: flex;
+    justify-content: center;
+    gap: 2px;
+    align-items: center;
+    min-width: 60px;
+    height: 40px;
+    background: #F20D0D;
+    border-radius: 20px;
+}
+.home-mob__goods__item__bottom__cart-active__info {
+    margin-top: -3px;
+    display: flex;
+    flex-direction: column;
+    text-align: right;
+}
+.home-mob__goods__item__bottom__cart-active__info__title {
+    font-weight: 500;
+    font-size: 16px;
+    color: #FFFFFF;
+}
+.home-mob__goods__item__bottom__cart-active__info__subtitle {
+    margin-top: -7px;
+    font-weight: 700;
+    font-size: 10px;
+    color: #FFFFFF;
+}
+
+
 .footer_mob {
     opacity: 0;
 }
+
+@media (max-width: 1280px) {
+    .home__menu__item span {
+        line-height: 100%;
+        font-weight: 600;
+        font-size: 27px;
+        color: #545454;
+    }
+    .home__menu {
+        margin-top: 40px;
+        display: flex;
+        justify-content: space-between;
+        gap: 68px;
+    }
+    .home__menu__item__border {
+        height: 79px;
+        width: 3px;
+        background: #545454;
+    }
+}
+@media (max-width: 1024px) {
+    .home__menu__item span {
+        line-height: 100%;
+        font-weight: 600;
+        font-size: 21px;
+        color: #545454;
+    }
+    .home__menu {
+        margin-top: 40px;
+        display: flex;
+        justify-content: space-between;
+        gap: 0;
+    }
+    .home__menu__item__border {
+        height: 79px;
+        width: 3px;
+        background: #545454;
+    }
+    .home__goods__list {
+        margin-top: 21px;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 43px 43px;
+        width: 100%;
+    }
+    .home__goods__item {
+        box-sizing: border-box;
+        padding: 10px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        width: 280px;
+        height: 450px;
+        background: #FFFFFF;
+        border-radius: 10px;
+    }
+    .home__goods__list {
+        margin-top: 21px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        gap: 20px 0;
+        width: 100%;
+    }
+}
+
 @media (max-width: 1015px) {
+    .home__goods {
+        margin-top: 58px;
+    }
+    .home__container {
+        margin: 0 auto;
+        width: 92.5%;
+        padding: 0;
+        padding-bottom: 30px;
+    }
+    .home__goods__title {
+        font-weight: 500;
+        font-size: 16px;
+        color: #545454;
+    }
+    .home__goods__list {
+        display: none;
+    }
+    .home-mob__goods__list {
+        margin-top: 18px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        gap: 15px 10px;
+    }
+    .home-mob__goods__item {
+        width: 168px;
+        height: 245px;
+    }
+    .home-mob__goods__item__image {
+        width: 150px;
+        height: 150px; 
+        background: url(../images/home/good_mob.png);
+    }
+    .home__main__image {
+        width: 100%;
+        height: 230px;
+        background: url(../images/home/main_image_mob.png);
+        background-repeat: no-repeat;
+        background-size: 100% 230px;
+    }
+    .home__menu {
+        gap: 0;
+    }
+    .home__menu__item__border {
+        display: none;
+    }
     .footer {
         opacity: 0;
     }
     .footer_mob {
         opacity: 1;
     }
+}
+@media (max-width: 750px) {
+    .home__menu {
+        margin-top: 40px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        gap: 0 25px;
+        flex: 0 0 50%;
+    }
+    .home__menu__item {
+        text-align: center;
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        height: 79px;
+    }
+}
+@media (max-width: 740px) {
+    .home__menu__item span {
+        line-height: 100%;
+        font-weight: 600;
+        font-size: 24px;
+        color: #545454;
+    }
+    .home__menu {
+        margin-top: 40px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        gap: 0;
+        flex: 0 0 50%;
+    }
+    .home__menu {
+        padding: 0 20px;
+    }
+    .home__menu__item { 
+        width: 50%;
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        height: 79px;
+    }
+    .home__menu__item span{ 
+        text-align: left;
+    }
+    .home__menu__item:nth-child(3) { 
+        justify-content: end;
+    }
+    .home__menu__item:nth-child(7){ 
+        width: 50%;
+        justify-content: end;
+    }
+    .home__menu__item:nth-child(7) span{ 
+        text-align: right;
+    }
+    
+}
+@media (max-width: 500px) {
+    .home__menu__item:nth-child(7){ 
+        width: 34%;
+        justify-content: end;
+    }
+     
+}
+@media (max-width: 450px) {
+    .home__menu {
+        margin-top: 40px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        gap: 0;
+        flex: 0 0 50%;
+    }
+    .home__menu__item {
+        text-align: center;
+        width: 34%;
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        height: 79px;
+    }
+    .home__menu__item:nth-child(7){ 
+        width: 34%;
+    }
+}
+@media (max-width: 380px) {
+    .home__container {
+        width: 92.5%;
+    }
+    .home-mob__goods__item {
+        width: 160px;
+        height: 245px;
+    }
+}
+@media (max-width: 350px) {
+    .home__container {
+        width: 95%;
+    }
+    .home-mob__goods__item {
+        width: 145px;
+        height: 230px;
+    }
+    .home-mob__goods__item__image {
+        width: 135px;
+        height: 135px; 
+        background: url(../images/home/good_mob.png);
+        background-size: 135px 135px;
+    }
+    
 }
