--- a/public/styles/good.css
+++ b/public/styles/good.css
@@ -1,6 +1,5 @@
 .good__main-section {
     margin-top: 130px;
-    height: calc(130vh);
 }
 .good__container {
     box-sizing: border-box;
@@ -22,17 +21,17 @@
 
 .good__main__image {
     display: flex;
-    padding-top: 20px;
-    width: 100%;
+    justify-content: space-between;
+    padding: 11px 20px 0 20px;
 }
 .good__main__image__sidebar {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 15px;
+    gap: 62px;
     margin-top: 1.56px;
-    margin-left: 20px;
     width: 70px;
+    padding-top: 10px;
 }
 .good__main__image__sidebar img {
     cursor: pointer;
@@ -41,6 +40,7 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+    
 }
 .good__main__slider__img{
     width: 70px;
@@ -53,29 +53,31 @@
 }
 .good__main__image__content {
     display: flex;
-    justify-content: center;
     align-items: center;
-    margin-left: 10px;
-    width: 980px;
-    height: 200px;
-    background: #F2F4F5;
-    border-radius: 10px;
+    justify-content: center;
+    width: 470px;
 }
 .good__main__image__content img {
-    height: 200px;
+    height: 470px;
+    width: 470px;
 }
 .good__main__down {
     display: flex;
-    margin-top: 40px;
-    width: 100%;
-    justify-content: space-between;
+    margin-top: 9px;
+    flex-direction: column;
+    box-sizing: border-box;
+    padding-left: 30px;
 }
 .good__main__down__left {
-    box-sizing: border-box;
-    padding: 0 51px 0 20px;
-    width: 732px;
-    height: 220px;
-    border-right: 1px solid #545454;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.good__main__down__head {
+    margin-top: -15px;
+    display: flex;
+    align-items: end;
+    gap: 28px;
 }
 .good__main__down__left__title {
     font-weight: 500;
@@ -96,21 +98,15 @@
 }
 .good__main__down__left__price {
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    justify-content: space-between;
     margin-top: 40px;
-    width: 100%;
     height: 40px;
 }
 .good__main__down__left__wish {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    height: 40px;
-    margin-right: 10px;
-    background: linear-gradient(90deg, rgba(242, 244, 245, 0) 42.8%, #F2F4F5 100%);
-    border-radius: 5px;
+    flex-direction: column;
+    gap: 13px;
 }
 .good__main__down__left__wish img {
     cursor: pointer;
@@ -120,13 +116,14 @@
 }
 .good__main__wish__price__title {
     font-weight: 700;
-    font-size: 24px;
+    font-size: 32px;
 }
 .good__main__wish__price__subtitle {
     margin-top: -4px;
     font-weight: 300;
     font-size: 14px;
     text-decoration: line-through;
+    color: #F20D0D;
 }
 .good__main__down__left__cart {
     cursor: pointer;
@@ -153,7 +150,6 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100%;
     margin-top: 10px;
 }
 .good__main__down__color {
@@ -162,19 +158,33 @@
     gap: 10px;
     height: 40px;
 }
+.good__main__down__color__left {
+    width: 32px;
+    height: 32px;
+    background: #F20D0D;
+    border: 1px solid #F2F4F5;
+    border-radius: 20px;   
+}
+.good__main__down__color__right {
+    width: 32px;
+    height: 32px;
+    background: #65B6DD;
+    border: 1px solid #F2F4F5;
+    border-radius: 20px;
+}
 .good__main__down__color img {
     cursor: pointer;
 }
 .good__main__down__count {
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    width: 115px;
+    justify-content: space-between;
+    width: 145px;
     height: 40px;
 }
 .good__main__down__right {
     margin-right: 10px;
-    width: 410px;
+    width: 492px;
 }
 .good__main__down__right__title {
     font-weight: 500;
@@ -184,24 +194,8 @@
 }
 .good__main__down__right__content {
     margin-top: 2px;
-    box-sizing: border-box;
-    padding-right: 20px;
-    width: 100%;
-    height: 200px;
-    overflow-y: auto;
 }
-.good__main__down__right__content::-webkit-scrollbar {
-    width: 10px;
-}
-.good__main__down__right__content::-webkit-scrollbar-track {
-    background: #FFFFFF;
-    box-shadow: inset 0px 0px 8px rgba(0, 0, 0, 0.05);
-    border-radius: 5px;
-}
-.good__main__down__right__content::-webkit-scrollbar-thumb {
-    background: #DA5C34;
-    border-radius: 5px;
-}
+
 .good__main__down__right__content p {
     font-size: 12px;
     line-height: 140%;
@@ -218,140 +212,98 @@
     color: #545454;
 }
 .good__reviews {
-    margin-top: 19px;
     display: flex;
+    align-items: baseline;
     justify-content: space-between;
     width: 100%;
 }
-.good__reviews__left {
-    display: flex;
-    justify-content: space-between;
-    width: 680px;
-    height: 350px;
-    background: #fff;
-    border-radius: 8px;
-}
-.good__reviews__circle {
-    box-sizing: border-box;
-    padding-top: 185px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 40px 0 0 51px;
-    width: 270px;
-    height: 270px;
-    background-image: url(../images/good/circle.svg);
-    background-size: 270px 270px;
-}
-.good__reviews__circle p {
-    font-size: 12px;
-    line-height: 21px;
-    text-align: center;
-    letter-spacing: 0.01em;
-    color: #545454;
-}
-.good__reviews__line {
-    display: flex;
-    flex-direction: column;
-    gap: 12px;
-    margin: 18px 40px 0 0;
-    width: 277px;
-}
-.good__reviews__line__item {
-    display: flex;
-    justify-content: space-between;
-}
-.good__reviews__line__item__title {
-    margin-top: 19px;
-    font-weight: 600;
-    font-size: 24px;
-    line-height: 29px;
-    letter-spacing: 0.01em;
-    color: #545454;
-}
-.good__reviews__line__item__inner {
-    display: flex;
-    flex-direction: column;
-    width: 240px;
-    gap: 7px;
-}
-.good__reviews__line__item__inner span {
-    height: 15px;
-    font-size: 12px;
-    line-height: 15px;
-    letter-spacing: 0.01em;
-    color: #545454;
-}
-.good__reviews__line__strip {
-    width: 240px;
-    height: 20px;
-    background: #F2F4F5;
-    border-radius: 10px;
-}
-.good__reviews__line__painted {
-    box-sizing: border-box;
-    padding-right: 6px;
+.good__reviews__btn {
     display: flex;
     align-items: center;
-    justify-content: end;
-    height: 20px;
-    background: #DA5C34;
-    border-radius: 10px;
-}
-.good__reviews__line__painted img {
-    margin-bottom: 1px;
+    justify-content: center;
+    width: 180px;
+    height: 40px;
+    background: #FFFFFF;
+    border-radius: 20px;    
 }
 
-.good__reviews__right {
-    width: 480px;
-    height: 350px;
-    background: #fff;
-    border-radius: 8px;
+.good__main__down__info {
+    display: flex;
+    flex-direction: column;
+    gap:5px;
 }
-.good__reviews__list {
-    margin: 2px 10px 0 10px;
-    height: 340px;
-    width: 460px;
-    overflow-y: auto;
+.good__main__down__info span {
+    font-weight: 400;
+    font-size: 10px;
+
+    color:#C0C0C0;
 }
-.good__reviews__list::-webkit-scrollbar {
-    width: 10px;
+.good__main__staff {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap:6px;
 }
-.good__reviews__list::-webkit-scrollbar-track {
-    background: #FFFFFF;
-    box-shadow: inset 0px 0px 8px rgba(0, 0, 0, 0.05);
-    border-radius: 5px;
+.good__main__staff__price {
+    display: flex;
+    gap: 2px;
 }
-.good__reviews__list::-webkit-scrollbar-thumb {
-    background: #DA5C34;
-    border-radius: 5px;
+.good__main__staff__price span:first-child {
+    font-weight: 400;
+    font-size: 12px;
+    color: #545454;
 }
-.good__reviews__item {
-    box-sizing: border-box;
-    padding: 10px 0 0 10px;
-    margin-top: 8px;
-    width: 440px;
+.good__main__staff__price span:nth-child(2) {
+    font-weight: 400;
+    font-size: 12px;
+    color: #F20D0D;
 }
-.good__reviews__item__header {
+
+.good__main__staff__btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 140px;
+    height: 40px;
+    background: #F20D0D;
+    box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.08);
+    border-radius: 20px;
+}
+.good__main__staff__btn__title {
+    font-size: 15px;
+    color: #FFFFFF;
+}
+.good__main__down__size {
+    display:flex;
+    flex-direction: column;
+    gap: 5px;
+}
+.good__main__down__size span {
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 12px;
+    color: #C2C9CC;
+}
+.good__main__down__size__box {
     display: flex;
     align-items: center;
-    gap: 10px
+    gap: 10px;
 }
-.good__reviews__item__header span {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 20px;
-    letter-spacing: 0.01em;
-    color: #545454;
+.good__main__down__size__item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 120px;
+    height: 32px;
+    border: 1.5px solid #545454;
+    filter: drop-shadow(0px 0px 16px rgba(0, 0, 0, 0.08));
+    border-radius: 20px;    
 }
-.good__reviews__item__content {
-    margin-top: 10px;
-    font-size: 12px;
-    line-height: 140%;
-    color: #545454;
-}
-.good__reviews__item__images {
-    margin-top: 10px;
+.good__main__down__size__item span {
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 18px;
+    color: #545454;   
 }
 
 @media (max-width: 1200px) {
@@ -364,6 +316,27 @@
         width: 408px;
         height: 300px;
         background: #fff;
+    }
+}
+@media (max-width: 1024px) {
+    .good__main__image {
+        padding: 11px 10px 0 10px;
+    }
+    .good__main__down {
+        padding-left: 10px;
+    }
+    .good__main__down__right {
+        margin-right: 0;
+        width: initial;
+    }
+    .good__main__image__content {
+        margin-left: 10px;
+    }
+    .good__main__wish__price__title {
+        font-size: 25px;
+    }
+    .good__reviews__title {
+        margin-left: 0;
     }
 }
 @media (max-width: 1015px) {
