--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -2,7 +2,7 @@
     width: 100%; 
 }
 .header-pc {
-    position: absolute;
+    position: fixed;
     width: 100%;
     top: 0;
     left: 0;
@@ -158,7 +158,7 @@
 .pull__main {
     z-index: 2;
     background: #F2F4F5;
-    position: absolute;
+    position: fixed;
     height: 100%;
     display: none;
     align-items: flex-start;
@@ -208,13 +208,47 @@
     display: flex;
     align-items: flex-start;
 }
+.pull-catalog__list {
+    overflow: hidden;
+    max-height: 0;
+    width: 382px;
+}
+.pull-catalog__item {
+    cursor: pointer;
+    box-sizing: border-box;
+    padding-left: 20px;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 60px;
+    background: #FFFFFF; 
+    border-bottom: 1.5px solid #F2F4F5;
+}
+.pull-catalog__item span {
+    font-size: 20px;
+    color: #545454;
+}
+.pull-catalog__item-mobile {
+    cursor: pointer;
+    box-sizing: border-box;
+    padding-left: 20px;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 60px;
+    border-bottom: 1.5px solid #F2F4F5;
+}
+.pull-catalog__item-mobile span {
+    font-size: 20px;
+    color: #545454;
+}
 .pull-catalog-active {
-    transition: opacity 0.15s;
-    opacity: 1;
+    transition: max-height 0.5s;
+    max-height: 750px;
 }
 .pull-catalog-disable {
-    transition: opacity 0.15s;
-    opacity: 0;
+    transition: max-height 0.5s;
+    max-height: 0;
 }
 .pull-catalog-stock {
     opacity: 0;
@@ -314,6 +348,7 @@
     display: flex;
 }
 .pull-menu__list {
+    overflow: hidden;
     width: 420px;
     list-style: none;
     margin-left: 130px;
@@ -333,6 +368,7 @@
     color: #545454;
     border-bottom: 1px solid #545454;
 }
+
 .pull-menu__item__catalog-img {
     height: 0;
     transition: height 1s;
