--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -149,7 +149,7 @@
 }
 .nav-bottom__cart-price {
     width: 70px;
-    margin-left: -5px;
+    margin-right: -30px;
     font-weight: 500;
     font-size: 16px;
     letter-spacing: 0.01em;
@@ -183,7 +183,7 @@
     position: absolute;
     margin-left: -60px;
     margin-top: -60px;
-    min-height: calc(125vh - 181px);
+    min-height: 1000px;
     z-index: 1;
 }
 .pull__main__blur-active {
