--- a/public/styles/cart.css
+++ b/public/styles/cart.css
@@ -6,6 +6,12 @@
 }
 
 .cart__main {
+    display: none;
+    margin-top: 130px;
+    min-height: calc(100vh - 180px);
+}
+.cart__main-active {
+    display: block;
     margin-top: 130px;
     min-height: calc(100vh - 180px);
 }
