--- a/public/styles/cart.css
+++ b/public/styles/cart.css
@@ -68,7 +68,7 @@
     font-size: 11px;
     line-height: 12px;
     letter-spacing: 0.01em;
-    color: #DA5C34;
+    color: #F20D0D;
 }
 
 
@@ -151,7 +151,7 @@ ul {
     cursor: pointer;
     width: 211px;
     height: 40px;
-    background: #DA5C34;
+    background: #F20D0D;
     border-radius: 20px;
     display: flex;
     justify-content: space-between;
@@ -222,7 +222,7 @@ ul {
     font-size: 16px;
     line-height: 20px;
     letter-spacing: 0.01em;
-    color: #DA5C34;
+    color: #F20D0D;
 }
 
 .cart__main__content {
@@ -292,7 +292,7 @@ ul {
 }
 .cart__main__content__item__info__content span {
     margin-left: 10px;
-    color: #DA5C34;
+    color: #F20D0D;
 }
 .cart__main__content__item__count-price {
     margin-left: 25px;
@@ -318,14 +318,14 @@ ul {
     margin-top: -3px;
     text-decoration: line-through;
     font-size: 14px;
-    color: #DA5C34;
+    color: #F20D0D;
 }
 .cart__main__content__item__count {
     margin-left: 15px;
     font-weight: 600;
     font-size: 22px;
     line-height: 24px;
-    color: #DA5C34;
+    color: #F20D0D;
 }
 .cart__main__content__item__count__title {
     font-size: 12px;
@@ -374,7 +374,7 @@ ul {
     padding: 0px 10px;
     width: 170px;
     height: 40px;
-    border: 1px solid #DA5C34;
+    border: 1px solid #F20D0D;
     border-radius: 20px;
 }
 .cart__main__content__item__itog__title {
