--- a/public/styles/tkani.css
+++ b/public/styles/tkani.css
@@ -18,6 +18,7 @@
     align-items: center;
 }
 .tkani__navigation__back-btn {
+    cursor: pointer;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -50,12 +51,10 @@
 .tkani__main {
     margin-top: 20px;
     display: flex;
-    justify-content: space-between;
     align-items: flex-start;
 }
 .tkani__main__sidebar {
     width: 280px;
-    height: 680px;
     background: #FFFFFF;
     border-radius: 10px;
 }
@@ -145,15 +144,32 @@
     gap: 10px;
 }
 
-.tkani__filter__item__inner__span {
-    cursor: pointer;
+.tkani__filter__item__inner__label {
     display: flex;
     align-items: center;
+}
+.tkani__filter__item__inner__check__input {
+    -webkit-appearance: none;
+}
+.tkani__filter__item__inner__check__input:checked + .tkani__filter__item__inner__check__box {
+    background-image: url(../images/tkani/check-on.svg);
+}
+.tkani__filter__item__inner__label__text {
+    color: #F2F4F5;  
     font-weight: 500;
     font-size: 16px;
     line-height: 20px;
     letter-spacing: 0.01em;
+}
+.tkani__filter__item__inner__check__input:checked ~ .tkani__filter__item__inner__label__text {
     color: #545454;
+}
+.tkani__filter__item__inner__check__box {
+    margin-right: 7.3px;
+    width: 20px;
+    height: 20px;
+    background-image: url(../images/tkani/check-off.svg);
+    background-size: 20px 20px;
 }
 .tkani__filter__item__down {
     cursor: pointer;
@@ -162,12 +178,27 @@
     margin-top: 14px;
 }
 .tkani__main__content {
-    margin-left: 10px;
-    width: 900px;
+    margin-left: 20px;
+    width: 880px;
     display: flex;
     flex-wrap: wrap;
     align-items: flex-start;
-    gap: 10px;
+    gap: 20px;
+}
+.tkani__main__sort {
+    display: flex;
+    gap: 20px;
+    align-items: baseline;
+    width: 100%;
+    height: 22px;
+}
+.tkani__main__sort__text {
+    font-weight: 500;
+    font-size: 16px;
+    color: #545454;
+}
+.text-red {
+    color: #F20D0D !important;
 }
 .tkani__main__content__item {
     display: flex;
