--- a/public/styles/lk.css
+++ b/public/styles/lk.css
@@ -80,7 +80,7 @@
     color: #545454
 }
 .lk-clients__sidebar__menu__item-active {
-    background: #DA5C34;
+    background: #F20D0D;
 }
 .lk-clients__sidebar__menu__item-active .lk-clients__sidebar__menu__item__title {
     margin-bottom: 0.51px;
@@ -112,7 +112,7 @@
     align-items: center;
     width: 140px;
     height: 40px;
-    background: #DA5C34;
+    background: #F20D0D;
     box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.08);
     border-radius: 20px;
     font-size: 16px;
@@ -202,7 +202,7 @@
 .lk-clients__content__main__item__bottom__phone {
     font-size: 14px;
     line-height: 17px;
-    color: #DA5C34;
+    color: #F20D0D;
 }
 .lk-clients__content__main__item__bottom__address {
     max-width: 250px;
@@ -242,7 +242,7 @@
 .lk-order__content__item__top__subtitle {
     font-size: 12px;
     line-height: 15px;
-    color: #DA5C34;
+    color: #F20D0D;
 }
 .lk-order__content__item__top__title {
     font-weight: 600;
@@ -265,7 +265,7 @@
     font-size: 10px;
     line-height: 12px;
     text-align: right;
-    color: #DA5C34;
+    color: #F20D0D;
 }
 .lk-order__content__main__item__bottom {
     display: flex;
@@ -280,7 +280,7 @@
 .lk-order__slash-orange {
     margin: 0 3px 0 3px;
     font-weight: 500;
-    color: #DA5C34;
+    color: #F20D0D;
 }
 
 .lk__btn-160 {
@@ -408,7 +408,7 @@
     font-weight: 500;
     font-size: 14px;
     line-height: 17px;
-    color: #DA5C34;
+    color: #F20D0D;
 }
 .lk-order_inner__main__info__right__top {
     display: flex;
@@ -426,7 +426,7 @@
 .lk-order_inner__main__info__right__top__right__subtitle {
     font-size: 14px;
     line-height: 17px;
-    color: #DA5C34;
+    color: #F20D0D;
 }
 .lk-order_inner__main__info__right__bottom {
     display: flex;
@@ -481,7 +481,7 @@
 }
 .lk__orange-600 {
     font-weight: 600;
-    color: #DA5C34;
+    color: #F20D0D;
 }
 .lk-order_inner__main__goods__header__count {
     display: flex;
@@ -574,7 +574,7 @@
     font-weight: 300;
     font-size: 14px;
     line-height: 14px;
-    color: #DA5C34;
+    color: #F20D0D;
     text-decoration: line-through;
 }
 .lk-order_inner__main__goods__item__price__bottom {
