--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -420,8 +420,7 @@
     margin-right: 1%;
     width: 40px;
     height: 40px;
-    border-radius: 50%;
-    border: 1px solid #F2F4F5;
+    border-radius: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
