--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -76,7 +76,7 @@ a {
 	margin-top: 21px;
 	display: flex;
 	flex-wrap: wrap;
-	gap: 20px 20px;
+	gap: 20px 2%;
 	width: 100%;
 }
 .home__goods__item {
@@ -85,16 +85,19 @@ a {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	width: 279px;
+	width: 23.5%;
 	height: 450px;
 	background: #ffffff;
 	border-radius: 10px;
 }
 .home__goods__item__image {
 	cursor: pointer;
-	width: 260px;
+	width: 100%;
 	height: 260px;
 	background: url(../images/home/good.png);
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
 }
 .home__goods__item__info {
 	margin-top: 22px;
@@ -246,6 +249,14 @@ a {
 		height: 79px;
 		width: 3px;
 		background: #545454;
+	}
+}
+@media (max-width: 1145px) {
+	.home__goods__list {
+		gap: 20px 5%;
+	}
+	.home__goods__item {
+		width: 30%;
 	}
 }
 @media (max-width: 1024px) {
