--- a/client/public/styles/edit-profile-mob.css
+++ b/client/public/styles/edit-profile-mob.css
@@ -6,7 +6,7 @@
     .edit-profile {
         width: 340px;
         height: 710px;
-        gap: 30px;
+        gap: 20px;
     }
     .edit-profile__up {
         width: 100%;
@@ -29,14 +29,33 @@
         width: 160px;
         height: 160px;
     }
-    .edit-profile__down__profile {
-        margin-top: 30px;
-    }
     .edit-profile__down{
+        padding-top: 10px;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        gap: 20px;
     }
+    .edit-profile__down__info {
+        flex-direction: column;
+    }
+    .edit-profile__down__info__up {
+        flex-direction: column;
+    }
+    .edit-profile__down__info__data {
+        width: 310px;
+        height: 35px;
+    }
+    .edit-profile__down__profile__face {
+        width: 310px;
+        height: 35px;
+    }
+    .edit-profile__up__button {
+        width: 168px;
+        height: 40px;
+        margin-top: 10px;
+    }
+
 
 }
